@@ -18,8 +18,9 @@
 
 #include "deskflow/protocol_types.h"
 
-const char *const kMsgHello = "Deskflow%2i%2i";
-const char *const kMsgHelloBack = "Deskflow%2i%2i%s";
+// Keep the "Synergy" name for hello to preserve compatibility with Synergy
+const char *const kMsgHello = "Synergy%2i%2i";
+const char *const kMsgHelloBack = "Synergy%2i%2i%s";
 const char *const kMsgCNoop = "CNOP";
 const char *const kMsgCClose = "CBYE";
 const char *const kMsgCEnter = "CINN%2i%2i%4i%2i";
